--- a/backend/TeamGoott/.gitignore
+++ b/backend/TeamGoott/.gitignore
@@ -61,7 +61,7 @@ local.properties
 
 # Uncomment this line if you wish to ignore the project description file.
 # Typically, this file would be tracked if it contains build/dependency configurations:
-TeamGoot/.project
+.project
 
 ### Eclipse Patch ###
 # Spring Boot Tooling
