JDBC Mybatis 연결설정

--- a/backend/TeamGoott/.gitignore
+++ b/backend/TeamGoott/.gitignore
@@ -9,14 +9,13 @@ tmp/
 *.bak
 *.swp
 *~.nib
-local.properties
+**/connection.properties
 .settings/
 .loadpath
 .recommenders
 .classpath
 # External tool builders
 .externalToolBuilders/
-
 # Locally stored "Eclipse launch configurations"
 *.launch
 
