--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,6 +27,7 @@ jobs:
       - name: Build with Maven
         run: |
           cd backend
+          cd TeamGoott
           mvn clean package
 
       - name: Create SSH Key
