--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -87,6 +87,10 @@ jobs:
         run: |
           ssh-keyscan ${{ secrets.EC2_IP }} >> ~/.ssh/known_hosts
 
+      - name: Delete ROOT
+        run: |
+          ssh -i ~/ec2.pem -o UserKnownHostsFile=~/.ssh/known_hosts -tt ${{ secrets.EC2_USER }}@${{ secrets.EC2_IP }} "sudo rm -rf /opt/frontend/*"  # 기존 파일 삭제
+
       - name: Copy Frontend Files to EC2
         run: |
           scp -o StrictHostKeyChecking=no -r frontend/* ${{ secrets.EC2_USER }}@${{ secrets.EC2_IP }}:/opt/frontend/
