--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -53,7 +53,7 @@ jobs:
           
       - name: Deploy WAR to EC2
         run: |
-          scp -o StrictHostKeyChecking=no target/ROOT.war ${{ secrets.EC2_USER }}@${{ secrets.EC2_IP }}:/opt/tomcat/apache-tomcat-9.0.95/webapps/
+          scp -o StrictHostKeyChecking=no ${{ secrets.PROJECT_DIRECTORY }} ${{ secrets.EC2_USER }}@${{ secrets.EC2_IP }}:/opt/tomcat/apache-tomcat-9.0.95/webapps/
           
       - name: Start Tomcat
         run: |
