aop beancomponentscan 경로 수정

--- a/backend/TeamGoott/src/main/resources/connection.properties
+++ b/backend/TeamGoott/src/main/resources/connection.properties
@@ -1,4 +1,4 @@
 jdbc.driverClassName=com.mysql.cj.jdbc.Driver
-jdbc.url=jdbc:mysql://${DB_HOST}:3306/goott01
-jdbc.username=${DB_USERNAME}
-jdbc.password=${DB_PASSWORD}
+jdbc.url=jdbc:mysql://goott01.cafe24.com:3306/goott01
+jdbc.username=goott01
+jdbc.password=go240612!
