--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Build with Maven
         run: |
           cd backend/TeamGoott
-          DB_URL=${{ secrets.DB_HOST }} DB_USERNAME=${{ DB_USERNAME }} DB_PASSWORD=${{ secrets.DB_PASSWORD }} mvn clean package
+          DB_URL=${{ secrets.DB_HOST }} DB_USERNAME=${{ secrets.DB_USERNAME }} DB_PASSWORD=${{ secrets.DB_PASSWORD }} mvn clean package
 
       - name: make dir .ssh
         run: |
