--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,12 @@
   "description": "",
   "dependencies": {
     "axios": "^1.7.7",
+    "bootstrap": "^5.3.3",
+    "bootstrap-icons": "^1.4.1",
+    "fontawesome": "^5.6.3",
+    "i": "^0.3.7",
+    "jquery": "^1.12.4",
+    "npm": "^10.9.0",
     "vue": "2.6"
   }
 }
