--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -107,13 +107,9 @@ jobs:
           cd frontend
           npm install
           
-      - name: Delete ROOT
-        run: |
-          ssh -i ~/ec2.pem -o UserKnownHostsFile=~/.ssh/known_hosts -tt ${{ secrets.EC2_USER }}@${{ secrets.EC2_IP }} "sudo rm -rf /opt/frontend/*"  # 기존 파일 삭제
-
       - name: Copy Frontend Files to EC2
         run: |
-          scp -o StrictHostKeyChecking=no -r frontend/* ${{ secrets.EC2_USER }}@${{ secrets.EC2_IP }}:/opt/frontend/
+          rsync -avz --delete -e "ssh -i ~/ec2.pem -o StrictHostKeyChecking=no" frontend/ ${{ secrets.EC2_USER }}@${{ secrets.EC2_IP }}:/opt/frontend/
 
       - name: Restart Nginx
         run: |
