--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,7 +40,7 @@ jobs:
           echo "jdbc.url=${DB_URL}" >> backend/TeamGoott/src/main/resources/connection.properties
           echo "jdbc.username=${DB_USERNAME}" >> backend/TeamGoott/src/main/resources/connection.properties
           echo "jdbc.password=${DB_PASSWORD}" >> backend/TeamGoott/src/main/resources/connection.properties
-          echo "s3.accessKey=${S3_ACCESSKEY}" > backend/TeamGoott/src/main/resources/connection.properties
+          echo "s3.accessKey=${S3_ACCESSKEY}" >> backend/TeamGoott/src/main/resources/connection.properties
           echo "s3.secretKey=${S3_SECRETKEY}" >> backend/TeamGoott/src/main/resources/connection.properties
           echo "s3.region=ap-northeast-2" >> backend/TeamGoott/src/main/resources/connection.properties
           echo "s3.bucketName=goott-bucket" >> backend/TeamGoott/src/main/resources/connection.properties
