--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,9 @@
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.4.1",
     "fontawesome": "^5.6.3",
+    "fullcalendar": "^6.1.15",
     "i": "^0.3.7",
+    "install": "^0.13.0",
     "jquery": "^1.12.4",
     "npm": "^10.9.0",
     "vue": "^2.6.14"
