--- a/backend/TeamGoott/src/main/webapp/WEB-INF/web.xml
+++ b/backend/TeamGoott/src/main/webapp/WEB-INF/web.xml
@@ -48,4 +48,13 @@
 	   <url-pattern>/*</url-pattern>
 	</filter-mapping>
 <!-- utf-8 Encoding -->
+
+	<filter>
+		<filter-name>MultipartFilter</filter-name>
+		<filter-class>org.springframework.web.multipart.support.MultipartFilter</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>MultipartFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
 </web-app>
