--- a/backend/TeamGoott/pom.xml
+++ b/backend/TeamGoott/pom.xml
@@ -188,6 +188,14 @@
 			<artifactId>commons-fileupload</artifactId>
 			<version>1.4</version>
 		</dependency>
+		
+			<!-- https://mvnrepository.com/artifact/javax.mail/mail -->
+		<dependency>
+		    <groupId>javax.mail</groupId>
+		    <artifactId>mail</artifactId>
+		    <version>1.4.7</version>
+		</dependency>
+		
 	</dependencies>
     <build>
         <plugins>
