--- a/backend/TeamGoott/src/main/webapp/META-INF/maven/com.team/goott/pom.xml
+++ b/backend/TeamGoott/src/main/webapp/META-INF/maven/com.team/goott/pom.xml
@@ -195,7 +195,11 @@
 		    <artifactId>validation-api</artifactId>
 		    <version>2.0.1.Final</version>
 		</dependency>
-		
+		<dependency>
+	    <groupId>com.fasterxml.jackson.datatype</groupId>
+	    <artifactId>jackson-datatype-jsr310</artifactId>
+	    <version>2.15.2</version> <!-- 버전 정보 추가 -->
+	</dependency>
 	</dependencies>
     <build>
         <plugins>
