--- a/backend/TeamGoott/src/main/webapp/META-INF/maven/com.team/goott/pom.properties
+++ b/backend/TeamGoott/src/main/webapp/META-INF/maven/com.team/goott/pom.properties
@@ -3,5 +3,6 @@
 version=1.0.0-BUILD-SNAPSHOT
 groupId=com.team
 m2e.projectName=TeamGoott
-m2e.projectLocation=C\:\\springworkspace\\Goott\\backend\\TeamGoott
+groupId=com.team
 artifactId=goott
+version=1.0.0-BUILD-SNAPSHOT
