39 예약 관리 api 개발 (#104)
* GET:/reserve

* 2024/10/21

* 10/22 이메일/유저알림 기능

* 10/22 이메일/유저알림 기능

10/22 이메일/유저알림 기능

* 2024/10/23

* 2024/10/23

* 주석추가/ 상태코드별 알림 메세지 설정

* github에 업로드된 config.properties 삭제

* 이메일 형식수정 1차

* 10/28 connection.properties 수정

---------

Co-authored-by: yhs99 <45925957+yhs99@users.noreply.github.com>

--- a/backend/TeamGoott/pom.xml
+++ b/backend/TeamGoott/pom.xml
@@ -189,6 +189,12 @@
 			<version>1.4</version>
 		</dependency>
 		
+			<!-- https://mvnrepository.com/artifact/javax.mail/mail -->
+		<dependency>
+		    <groupId>javax.mail</groupId>
+		    <artifactId>mail</artifactId>
+		    <version>1.4.7</version>
+			</dependency>
 		<!-- https://mvnrepository.com/artifact/javax.validation/validation-api -->
 		<dependency>
 		    <groupId>javax.validation</groupId>
