--- a/backend/TeamGoott/src/main/webapp/META-INF/maven/com.team/goott/pom.xml
+++ b/backend/TeamGoott/src/main/webapp/META-INF/maven/com.team/goott/pom.xml
@@ -189,6 +189,12 @@
 			<version>1.4</version>
 		</dependency>
 		
+			<!-- https://mvnrepository.com/artifact/javax.mail/mail -->
+		<dependency>
+		    <groupId>javax.mail</groupId>
+		    <artifactId>mail</artifactId>
+		    <version>1.4.7</version>
+			</dependency>
 		<!-- https://mvnrepository.com/artifact/javax.validation/validation-api -->
 		<dependency>
 		    <groupId>javax.validation</groupId>
