--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,6 +35,8 @@ jobs:
           DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
           S3_ACCESSKEY: ${{ secrets.S3_ACCESSKEY }}
           S3_SECRETKEY: ${{ secrets.S3_SECRETKEY }}
+          username: ${{ secrets.SEND_EMAIL_ID }}
+          password: ${{ secrets.SEND_EMAIL_PASSWORD }}
         run: |
           echo "jdbc.driverClassName=com.mysql.cj.jdbc.Driver" > backend/TeamGoott/src/main/resources/connection.properties
           echo "jdbc.url=${DB_URL}" >> backend/TeamGoott/src/main/resources/connection.properties
@@ -44,6 +46,8 @@ jobs:
           echo "s3.secretKey=${S3_SECRETKEY}" >> backend/TeamGoott/src/main/resources/connection.properties
           echo "s3.region=ap-northeast-2" >> backend/TeamGoott/src/main/resources/connection.properties
           echo "s3.bucketName=goott-bucket" >> backend/TeamGoott/src/main/resources/connection.properties
+          echo "name=${username}" >> backend/TeamGoott/src/main/resources/connection.properties
+          echo "password=${password}" >> backend/TeamGoott/src/main/resources/connection.properties
 
       - name: Build with Maven
         run: |
